<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="https://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:ignore="NamespaceTypo">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="Orientation,UselessParent">

        <TextView
            android:id="@+id/title_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="22dp"
            tools:ignore="ObsoleteLayoutParam" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_change_lang"
            android:layout_below="@id/title_sign_up"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="vertical"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">


                <EditText
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/input"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textColorHint="#999"
                    tools:ignore="RtlCompat,UnusedAttribute" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/full_name"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/input"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textColorHint="#999"
                    tools:ignore="RtlCompat,UnusedAttribute" />


                <Spinner
                    android:id="@+id/spinner_country_info"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/password"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/list_small_en"
                    android:foregroundGravity="center"
                    android:gravity="start"
                    android:padding="4dp"
                    android:hint="@string/countryinfo_hint"
                    android:popupBackground="#fff"
                    android:spinnerMode="dropdown"
                    tools:ignore="RtlCompat" />


                <TextView
                    android:id="@+id/country_info"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/password"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@+id/spinner_country_info"
                    android:background="@drawable/input"
                    android:hint="@string/country_info"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textColorHint="#999"
                    android:textSize="15dp"
                    tools:ignore="RtlCompat,RtlHardcoded" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/country_info"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/input"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#999"
                    android:padding="5dp"
                    android:textAllCaps="false"
                    tools:ignore="RtlCompat,UnusedAttribute" />

                <Spinner
                    android:id="@+id/spinner_country_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/email"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/list_en"
                    android:gravity="start"
                    android:hint="@string/country"
                    android:popupBackground="#fff"
                    android:textAllCaps="false"
                    android:padding="4dp"
                    tools:ignore="RtlCompat,UnusedAttribute" />

                <Spinner
                    android:id="@+id/spinner_city_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/spinner_country_name"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/list_en"
                    android:hint="@string/city"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:popupBackground="#fff"
                    android:padding="4dp"
                    tools:ignore="RtlCompat,UnusedAttribute" />

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/spinner_city_name"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="35dp"
                    android:text="@string/by_clicking_register_you_agree_to"
                    android:textColor="#000"
                    android:textSize="12dp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/txt_terms_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/spinner_city_name"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="35dp"
                    android:layout_toEndOf="@+id/txt1"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/red"
                    android:textSize="13dp"
                    tools:ignore="RtlCompat" />

            </RelativeLayout>

        </ScrollView>


        <Button
            android:id="@+id/btn_change_lang"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_big_red"
            android:gravity="center"
            android:text="@string/change_language"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="22dp" />

    </RelativeLayout>

</LinearLayout>

